organize django files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   app:
     build: .
-    command: python main.py
+    command: python manage.py runserver
     ports:
       - 8001:8000
     volumes:
