--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   db:
-    image: postgres
+    image: postgres:11.4
     ports:
     - 5432:5432
     volumes:
@@ -19,5 +19,18 @@ services:
       - 8000:8000
     depends_on:
       - db
+      - minio
+    env_file:
+      - app/.env
+
+  minio:
+    container_name: minio
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - ./minio-data:/data
     env_file:
       - app/.env
