--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ djangorestframework==3.12.4
 drf-spectacular==0.18.1
 psycopg2-binary==2.9.1
 Pillow==8.3.1
+django-storages==1.11.1
+boto3==1.18.40
+botocore==1.21.40
+boto==2.49.0
