create basic views

--- a/app/.env
+++ b/app/.env
@@ -11,3 +11,4 @@ MINIO_ACCESS_KEY=uIOAWQSotDNJ7EXAMPLE
 MINIO_SECRET_KEY=uSKlrXUtnUWSI/K7MDENG/bPRRfiCYEXAMPLEKEY
 AWS_STORAGE_BUCKET_NAME=static
 AWS_S3_ENDPOINT_URL=http://localhost:9000
+API_KEY=JT9T-H82L-PZC6-HDRM
