--- a/app/env.template
+++ b/app/env.template
@@ -1,14 +1,14 @@
-POSTGRES_PASSWORD
-POSTGRES_USER
-POSTGRES_DB
-POSTGRES_HOST
-POSTGRES_PORT
-ENVIRONMENT
-SECRET_KEY
-MINIO_ROOT_USER
-MINIO_ROOT_PASSWORD
-MINIO_ACCESS_KEY
-MINIO_SECRET_KEY
-AWS_STORAGE_BUCKET_NAME
-AWS_S3_ENDPOINT_URL
-API_KEY
+POSTGRES_PASSWORD=password
+POSTGRES_USER=django
+POSTGRES_DB=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+ENVIRONMENT=dev
+SECRET_KEY=
+MINIO_ROOT_USER=minio
+MINIO_ROOT_PASSWORD=minio_password123
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+AWS_STORAGE_BUCKET_NAME=static
+AWS_S3_ENDPOINT_URL=http://localhost:9000
+API_KEY=
