add minio photo parsing functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   db:
     image: postgres:11.4
     ports:
-    - 5432:5432
+    - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
     env_file:
       - app/.env
 
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./app:/app
     ports:
-      - 8000:8000
+      - "8000:8000"
     depends_on:
       - db
       - minio
@@ -26,11 +26,11 @@ services:
   minio:
     container_name: minio
     image: minio/minio
-    command: server /data --console-address ":9001"
     ports:
-      - 9000:9000
-      - 9001:9001
+      - "9000:9000"
+      - "44987:44987"
     volumes:
       - ./minio-data:/data
     env_file:
       - app/.env
+    command: server /minio-data --console-address ":44987"
